<resources>
    <string name="DO">DO</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="action">Action</string>
    <string name="address">Address</string>
    <string name="aktifkan_gps">Aktifkan GPS</string>
    <string name="ambil_photo">Ambil Foto</string>
    <string name="anda_akan_memulai_proses_bongkar">Anda akan memulai Proses Bongkar. Apa anda yakin ?</string>
    <string name="anda_akan_mengakhiri_proses_bongkar">Anda akan menyelesaikan proses bongkar, Apa anda yakin ?</string>
    <string name="anda_akan_transit">Anda akan terkonfirmasi Transit di pelabuhan. Proses akan berakhir disini. Apa anda yakin ?</string>
    <string name="anda_berangkat_pada">Anda berangkat pada</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="apakah_anda_yakin_untuk_simpan_foto_ini">Apakah anda yakin untuk simpan foto ini ?</string>
    <string name="app_name">MyDex</string>
    <string name="app_name_mobile">MyDex Mobile</string>
    <string name="app_version">MyDex Pilot 24.09.01</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="application_will_be_terminate">Application will be terminate</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bottomsheet_action_collapse">Collapse the bottom sheet</string>
    <string name="bottomsheet_action_expand">Expand the bottom sheet</string>
    <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
    <string name="bottomsheet_drag_handle_clicked">Drag handle double-tapped</string>
    <string name="bottomsheet_drag_handle_content_description">Drag handle</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d/%2$d</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">%1$s won\'t work unless you enable Google Play services.</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">%1$s won\'t run without Google Play services, which are missing from your device.</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_channel_name">Google Play services availability</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">%1$s won\'t run without Google Play services, which are not supported by your device.</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">%1$s won\'t run unless you update Google Play services.</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">%1$s won\'t run without Google Play services, which are currently updating.</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="dalam_perjalanan">Dalam Perjalanan</string>
    <string name="dashboard">Dashboard</string>
    <string name="dashboard_utama">Dashboard Utama</string>
    <string name="data_rute_belum_ada">Data Rute Belum Ada. Harap Sync/Refresh Data</string>
    <string name="data_tujuan_belum_ada">Data Tujuan Belum Ada. Harap Sync/Refresh Data</string>
    <string name="define_roundedimageview" />
    <string name="dest_title">destination title</string>
    <string name="detail">Detail</string>
    <string name="detail_do_tidak_ada">Detail DO Tidak Ada</string>
    <string name="driver_outbound">Driver Outbound</string>
    <string name="dummy_mayora">Dummy Mayora</string>
    <string name="error_a11y_label">Error: invalid</string>
    <string name="error_icon_content_description">Error</string>
    <string name="error_need_to_add_trailing_effect_drawable">If you set trail enabled, you must set a value to button_trail_drawable.</string>
    <string name="exposed_dropdown_menu_content_description">Show dropdown menu</string>
    <string name="fab_transformation_scrim_behavior">com.google.android.material.transformation.FabTransformationScrimBehavior</string>
    <string name="fab_transformation_sheet_behavior">com.google.android.material.transformation.FabTransformationSheetBehavior</string>
    <string name="failed_sync">Failed Sync</string>
    <string name="finish">Finish</string>
    <string name="gagal_simpan_data">Gagal Simpan Data</string>
    <string name="gps_location_is_not_valid">GPS Location is Not Valid</string>
    <string name="hide_bottom_view_on_scroll_behavior">com.google.android.material.behavior.HideBottomViewOnScrollBehavior</string>
    <string name="icon_content_description">Dialog Icon</string>
    <string name="in_transit">In Transit</string>
    <string name="informasi">Informasi</string>
    <string name="input_data">Input Data</string>
    <string name="input_nama_driver">Input Nama Driver</string>
    <string name="input_no_mobil">Input Nomor Mobil</string>
    <string name="input_no_spe">Input No SPE</string>
    <string name="input_no_tlp_driver">Input No Tlp Driver</string>
    <string name="input_spe">Input SPE</string>
    <string name="item_view_role_description">Tab</string>
    <string name="jalur_perjalanan">Jalur Perjalanan</string>
    <string name="keluar_aplikasi">Keluar Aplikasi ?</string>
    <string name="keterangan">Keterangan :</string>
    <string name="konfirmasi">Konfirmasi</string>
    <string name="label1">Label</string>
    <string name="latitude">latitude</string>
    <string name="lengkapi_data">Lengkapi Data</string>
    <string name="library_roundedimageview_author">Vince Mi</string>
    <string name="library_roundedimageview_authorWebsite">https://github.com/vinc3m1</string>
    <string name="library_roundedimageview_isOpenSource">true</string>
    <string name="library_roundedimageview_libraryDescription">A fast ImageView (and Drawable) that supports rounded corners (and ovals or circles) based on the original example from Romain Guy.</string>
    <string name="library_roundedimageview_libraryName">RoundedImageView</string>
    <string name="library_roundedimageview_libraryVersion">1.3.0</string>
    <string name="library_roundedimageview_libraryWebsite">https://github.com/vinc3m1/RoundedImageView</string>
    <string name="library_roundedimageview_licenseId">apache_2_0</string>
    <string name="library_roundedimageview_repositoryLink">https://github.com/vinc3m1/RoundedImageView.git</string>
    <string name="list_data">List Data</string>
    <string name="longitude">longitude</string>
    <string name="m3_exceed_max_badge_text_suffix">%1$s%2$s</string>
    <string name="m3_ref_typeface_brand_medium">sans-serif-medium</string>
    <string name="m3_ref_typeface_brand_regular">sans-serif</string>
    <string name="m3_ref_typeface_plain_medium">sans-serif-medium</string>
    <string name="m3_ref_typeface_plain_regular">sans-serif</string>
    <string name="m3_sys_motion_easing_emphasized">path(M 0,0 C 0.05, 0, 0.133333, 0.06, 0.166666, 0.4 C 0.208333, 0.82, 0.25, 1, 1, 1)</string>
    <string name="m3_sys_motion_easing_emphasized_accelerate">cubic-bezier(0.3, 0, 0.8, 0.2)</string>
    <string name="m3_sys_motion_easing_emphasized_decelerate">cubic-bezier(0.1, 0.7, 0.1, 1)</string>
    <string name="m3_sys_motion_easing_emphasized_path_data">M 0,0 C 0.05, 0, 0.133333, 0.06, 0.166666, 0.4 C 0.208333, 0.82, 0.25, 1, 1, 1</string>
    <string name="m3_sys_motion_easing_legacy">cubic-bezier(0.4, 0, 0.2, 1)</string>
    <string name="m3_sys_motion_easing_legacy_accelerate">cubic-bezier(0.4, 0, 1, 1)</string>
    <string name="m3_sys_motion_easing_legacy_decelerate">cubic-bezier(0, 0, 0.2, 1)</string>
    <string name="m3_sys_motion_easing_linear">cubic-bezier(0, 0, 1, 1)</string>
    <string name="m3_sys_motion_easing_standard">cubic-bezier(0.2, 0, 0, 1)</string>
    <string name="m3_sys_motion_easing_standard_accelerate">cubic-bezier(0.3, 0, 1, 1)</string>
    <string name="m3_sys_motion_easing_standard_decelerate">cubic-bezier(0, 0, 0, 1)</string>
    <string name="masuk">Masuk</string>
    <string name="material_clock_display_divider">:</string>
    <string name="material_clock_toggle_content_description">Select AM or PM</string>
    <string name="material_hour_24h_suffix">%1$s hours</string>
    <string name="material_hour_selection">Select hour</string>
    <string name="material_hour_suffix">%1$s o\'clock</string>
    <string name="material_minute_selection">Select minutes</string>
    <string name="material_minute_suffix">%1$s minutes</string>
    <string name="no">No</string>
    <string name="password">Password</string>
    <string name="pcode">Pcode</string>
    <string name="pcodename">Pcode Name</string>
    <string name="qty">Qty</string>
    <string name="saat_ini_berada_di_lokasi">Saat Ini Berada Di Lokasi :</string>
    <string name="sentuh_untuk_ambil_foto">Sentuh untuk ambil foto</string>
    <string name="serial_number">Serial Number</string>
    <string name="swipe_to_save_photo">Geser untuk Simpan Foto</string>
</resources>