<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textSize="15sp"
            android:textColor="@color/black"
            android:layout_gravity="top"
            android:id="@+id/textViewNo"
            android:background="@drawable/table_content_cell_bg"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/no"
            android:layout_weight="1"/>
        <TextView
            android:textSize="15sp"
            android:textColor="@color/black"
            android:layout_gravity="top"
            android:id="@+id/textViewDo"
            android:background="@drawable/table_content_cell_bg"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/DO"
            android:layout_weight="2"/>
        <TextView
            android:textSize="15sp"
            android:textColor="@color/black"
            android:layout_gravity="top"
            android:id="@+id/textViewDetail"
            android:background="@drawable/table_content_cell_bg"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/detail"
            android:layout_weight="1"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
