<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/splash_screen"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="215dp"
        android:layout_height="215dp"
        android:layout_marginTop="76dp"
        android:src="@drawable/mydex_new"
        android:adjustViewBounds="true"
        android:layout_marginStart="76dp"
        android:layout_marginEnd="76dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    <EditText
        android:id="@+id/edtPassword"
        android:background="@drawable/rounded_corner_button"
        android:padding="10dp"
        android:layout_width="0dp"
        android:layout_height="54dp"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="25dp"
        android:layout_marginRight="60dp"
        android:hint="@string/password"
        android:singleLine="true"
        android:inputType="textPassword"
        android:fontFamily="@font/roboto_regular"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"/>
    <com.google.android.material.button.MaterialButton
        android:textSize="14sp"
        android:textStyle="bold"
        android:textColor="#000000"
        android:id="@+id/btnLogin"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="35dp"
        android:layout_marginRight="60dp"
        android:text="@string/masuk"
        android:fontFamily="@font/roboto_regular"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="60dp"
        android:backgroundTint="#ffffff"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtPassword"/>
    <TextView
        android:textColor="@color/gray"
        android:id="@+id/txtSerialId"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="35dp"
        android:layout_marginRight="60dp"
        android:text="@string/serial_number"
        android:textAlignment="center"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnLogin"/>
    <TextView
        android:textColor="@color/gray"
        android:id="@+id/txtSerial"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="0dp"
        android:layout_marginRight="60dp"
        android:textAlignment="center"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtSerialId"/>
    <TextView
        android:textColor="@color/gray"
        android:id="@+id/textView12"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/app_version"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtSerial"/>
</androidx.constraintlayout.widget.ConstraintLayout>
