<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/takePhotoActivity"
    android:background="@color/white_little_dark"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.cardview.widget.CardView
            android:id="@+id/cardViewPhoto"
            android:background="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="2dp"
            android:foreground="?android:attr/selectableItemBackground"
            android:layout_marginStart="18dp"
            android:layout_marginEnd="18dp"
            app:cardBackgroundColor="@color/gray"
            app:cardCornerRadius="6dp"
            app:cardElevation="6dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <com.makeramen.roundedimageview.RoundedImageView
                    android:gravity="end"
                    android:id="@+id/imgPhoto"
                    android:background="@color/gray"
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    android:scaleType="fitCenter"
                    android:layout_weight="1"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/textCard"
            android:background="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="3dp"
            android:paddingEnd="3dp"
            android:layout_marginStart="18dp"
            android:layout_marginEnd="18dp"
            app:cardBackgroundColor="@color/gray"
            app:cardCornerRadius="6dp"
            app:cardElevation="6dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardViewPhoto">
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textColor="@color/splash_screen"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:text="@string/keterangan"
                    android:fontFamily="@font/tt_interphases_regular"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"/>
                <TextView
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:textColor="@color/blue_warm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:text="@string/saat_ini_berada_di_lokasi"
                    android:fontFamily="@font/tt_interphases_regular"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"/>
                <TextView
                    android:textSize="15sp"
                    android:textStyle="italic"
                    android:textColor="@color/blue_warm"
                    android:id="@+id/txtLatitude"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:text="@string/latitude"
                    android:fontFamily="@font/tt_interphases_regular"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"/>
                <TextView
                    android:textSize="15sp"
                    android:textStyle="italic"
                    android:textColor="@color/blue_warm"
                    android:id="@+id/txtLongitude"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:text="@string/longitude"
                    android:fontFamily="@font/tt_interphases_regular"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"/>
                <TextView
                    android:textSize="15sp"
                    android:textStyle="italic"
                    android:textColor="@color/blue_warm"
                    android:id="@+id/txtAddress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:text="@string/address"
                    android:fontFamily="@font/tt_interphases_regular"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <LinearLayout
            android:orientation="vertical"
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="parent">
            <LinearLayout
                android:orientation="vertical"
                android:id="@+id/linearLayout1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp">
                <com.google.android.material.button.MaterialButton
                    android:textColor="@color/white_warm"
                    android:id="@+id/btnTakePhoto"
                    android:background="@color/splash_screen"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sentuh_untuk_ambil_foto"
                    android:fontFamily="@font/tt_interphases_regular"
                    app:icon="@drawable/ic_baseline_photo_camera_white_24"/>
            </LinearLayout>
            <LinearLayout
                android:orientation="vertical"
                android:id="@+id/linearLayout2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp">
                <com.ebanx.swipebtn.SwipeButton
                    android:id="@+id/swipeButtonSave"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/tt_interphases_regular"
                    app:button_background="@drawable/shape_button"
                    app:button_bottom_padding="20dp"
                    app:button_left_padding="20dp"
                    app:button_right_padding="20dp"
                    app:button_top_padding="20dp"
                    app:button_trail_enabled="false"
                    app:has_activate_state="true"
                    app:initial_state="disabled"
                    app:inner_text="@string/swipe_to_save_photo"
                    app:inner_text_background="@drawable/shape_rounded"
                    app:inner_text_bottom_padding="18dp"
                    app:inner_text_color="@color/white"
                    app:inner_text_size="18sp"
                    app:inner_text_top_padding="18dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"/>
            </LinearLayout>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
